[package]
name = "d02"
version = "0.1.0"
authors = ["ryotarofr <ryoryo.fr0608@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
getrandom = { version = "0.2.15", features = ["js"] }

# Debug
dioxus-logger = "0.5.1"
diamond-types = "1.0.0"

